# bagel-factor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  example.ipynb  example.py  main.py  pyproject.toml  requirements.txt  todo.md
.github/workflows/: ci.yml
docs/: benchmarks.md  data_format_requirements.md  doc_factor_model.md  doc_single_factor_evaluation.md  example.md  factor_evaluation.md  interpretation_guide.md  project_structure.md  result_class_documentation.md  single-factor-evaluation.md  todo.md  v_2_0_0_proposal.md
docs/modules/: data.md  data_handling.md  data_module.md  evaluator.md  metrics.md  visualization.md
docs/modules/data/: align.md  calendar.md  data_module.md  factors.md  index.md  loaders.md  loaders_internal.md  panel.md  universe.md
docs/modules/evaluation/: factor_return_module.md  ic_module.md
docs/modules/metrics/: coverage.md  ic.md  index.md  quantiles.md  (+1 more)
docs/proposals/: proposals_v0.md
example_report/multi_factor/: model_evaluation_results.md
example_report/single_factor/: ExampleFactor_evaluation.md
examples/: benchmark_ic.py  example.py
examples/inputs/: panel.csv
examples/outputs/: coverage.csv  example_stdout.txt  ic_h1.csv  long_short_h1.csv  quantile_returns_h1.csv
notebooks/: single_factor_evaluation.ipynb
src/bagel_factor/: __init__.py  evaluator.py  factors.py
src/bagelfactor/: __init__.py  utils.py
tests/: test_data.py  test_data_module.py  test_evaluation.py  test_evaluator.py  test_factor_data.py  test_factor_evaluation.py  test_factors.py  test_ic.py  test_loaders.py  test_metrics_module.py  test_model_evaluation.py  test_plots.py  test_preprocessing.py  test_quantile_returns.py  test_risk_metrics.py  test_single_factor_module.py  test_stats_module.py  test_utils_module.py  test_visualization_module.py
tests/data/: sort_factor_next_returns.csv  sort_group_portfolios_next_returns.csv
tests/tem_eval_model_output/: model_evaluation_results.md
tests/tmp_eval_output/: UnitTestFactor_evaluation.md
(+64 files in other folders)
