[project]
name = "bagel-factor"
version = "0.1.0"
description = "Single-factor evaluation/testing toolkit (pandas-first)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name="Yanzhong Huang", email="eric.yanzhong.huang@gmail.com"}]
keywords = ["quant", "factor", "alpha", "finance", "research"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "exchange-calendars>=4.11.3",
    "pandas>=2.3.3",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "statsmodels>=0.14.2",
]

[project.urls]
Homepage = "https://github.com/bagelquant/bagel-factor"
Repository = "https://github.com/bagelquant/bagel-factor"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "twine>=6.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.hatch.build]
include = ["src/bagelfactor"]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N806",  # variable in function should be lowercase (allow X for matrices, Axes for matplotlib)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["bagelfactor"]

# uv settings (tools/uv may also be configured externally)
[tool.uv]
# uv's tool-specific python field isn't used in all versions; record Python compatibility here
# for humans and tools: requires-python already set at project table.

